<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="fav">Favorite</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind speed</string>
    <string name="clouds">Clouds</string>
    <string name="uv">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="alert">Alert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="add_to_fav">Add to Favorite</string>
    <string name="set_location">Set Location</string>
    <string name="cancel">Cancel</string>
</resources>