<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alertDialog"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    android:layout_width="410dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFrom"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/lightBlue"

            android:fontFamily="sans-serif"

            android:inputType="text"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="24dp"


            android:layout_marginEnd="32dp"

            android:backgroundTint="@color/lightBlue"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFrom"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromDate">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/alarm" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/notifications" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="180dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"

            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="sans-serif"
            android:inputType="text"

            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/fromTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btnFrom"
            app:layout_constraintStart_toStartOf="@+id/btnFrom"
            app:layout_constraintTop_toBottomOf="@+id/btnFrom" />

        <TextView
            android:id="@+id/fromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/fromTime"
            app:layout_constraintStart_toStartOf="@+id/fromTime"
            app:layout_constraintTop_toBottomOf="@+id/fromTime" />

        <TextView
            android:id="@+id/toTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btnTo"
            app:layout_constraintStart_toStartOf="@+id/btnTo"
            app:layout_constraintTop_toBottomOf="@+id/btnTo" />

        <TextView
            android:id="@+id/toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/toTime"
            app:layout_constraintStart_toStartOf="@+id/toTime"
            app:layout_constraintTop_toBottomOf="@+id/toTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>