<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/sky2"
    tools:context=".favorite.view.FavDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fav"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewDay"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:alpha="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recViewHour" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="100dp"
                android:alpha="0.7"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recViewDay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/pressure"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/pressure"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/pressure"
                        app:layout_constraintStart_toStartOf="@+id/pressure"
                        app:layout_constraintTop_toBottomOf="@+id/pressure" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="120dp"
                        android:src="@drawable/humidityper"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/humidity"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/humidity"
                        app:layout_constraintStart_toStartOf="@+id/humidity"
                        app:layout_constraintTop_toBottomOf="@+id/humidity" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="120dp"
                        android:src="@drawable/wind"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/wind"
                        app:layout_constraintStart_toStartOf="@+id/wind"
                        app:layout_constraintTop_toBottomOf="@+id/wind" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/cloud"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/clouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/clouds"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/clouds"
                        app:layout_constraintStart_toStartOf="@+id/clouds"
                        app:layout_constraintTop_toBottomOf="@+id/clouds" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>